# DevOps-CI-CD-Pipeline-with-Jenkins-Docker-on-AWS

devops_ans/: .gitignore  README.md
devops_ans/docs/: credentials-and-real-deploy.md  demo-recording-runbook.md  project1-jenkins.md  project2-docker-ec2.md  your-live-values.md
devops_ans/project1-jenkins/: Jenkinsfile  README.md
devops_ans/project1-jenkins/scripts/: bootstrap_test_server.sh  remote_install_and_restart.sh
devops_ans/project2-docker-ec2/: Dockerfile
devops_ans/project2-docker-ec2/scripts/: build_and_push.sh  ec2_deploy.sh
devops_ans/sample-python-app/: README.md  pyproject.toml  requirements.txt
devops_ans/sample-python-app/src/: __init__.py  app.py
devops_ans/sample-python-app/tests/: test_smoke.py
